Fix letter spacing to avoid grid collapse

--- a/bemo/mixins/_grid.sass
+++ b/bemo/mixins/_grid.sass
@@ -4,6 +4,7 @@
   margin-left: -$grid-gutter
   padding-left: 0
   padding-right: 0
+  letter-spacing: -1000em
 
 @mixin grid-item
   display: inline-block
@@ -13,4 +14,4 @@
   -webkit-box-sizing: border-box
   -moz-box-sizing: border-box
   box-sizing: border-box
-
+  letter-spacing: 0
